# desktop-screenshot-capturer

./: .editorconfig  .flake8  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  release.yml
archive/: README.md
docs/: API.md  CLI.md  README.md
examples/: README.md  advanced_usage.py  basic_usage.py
src/screenshot_capturer/: __init__.py  __main__.py  capturer.py  cli.py  config.py  exceptions.py
tests/: __init__.py  conftest.py  test_capturer.py  test_cli.py  test_config.py  test_exceptions.py
